Version 0.21.0
======================
- modify `GAMSDatabaseImpl::getSymbolByIndex` to keep it in sync with recent GMD change (gmdGetSymbolByIndex expects 1-based symbol index)

Version 0.20.2
======================
- fixed warnings

Version 0.20.1
======================
- updated documentation for `GAMSExceptionExecution`

Version 0.20.0
======================
- added new value `KeepFilesOnError` to `GAMS.DebugLevel` which keeps temporary files only in case of an error when executing GAMS during `GAMS.GAMSJob.Run` or `GAMS.GAMSJob.RunEngine`. Its internal numerical value is `1` and all values for `DebugLevel.KeepFiles` or greater have been increased by 1.- added optional argument of type `GAMS.GAMSWorkspace` to `GAMS.GAMSExceptionExecution` constructor. This needs to be set for `DebugLevel.KeepFilesOnError` to have an effect.
- changed the default of `GAMS.GAMSWorkspace` from `DebugLevel.Off` to `DebugLevel.KeepFilesOnError` with the effect that temporary files do not get deleted anymore in case of an error as described above.
- changed the behavior of `DebugLevel.ShowLog` to use `logOption=4` instead of `3` internally when executing GAMS
- fixed `GAMS.GAMSOptions.OptDir` property used with `GAMS.GAMSModelInstance.Instantiate` having no effect in `GAMS.GAMSModelInstance.Solve`

Version 0.19.4
======================
- updated external libraries
- added enforcement of TLS version 1.2 or greater

Version 0.19.3
======================
- added CMake option `USE-GCC` for example subproject to change library selection to prefer GCC over Clang

Version 0.19.2
======================
- fixed issue with zip when gams system dir contained spaces

Version 0.19.1
=======================
- reverted problematic change to cmake configuration

Version 0.19.0
========================
- added GAMSJob::runEngine to run jobs on GAMS Engine, rather than locally
    - added classes GAMSEngineConfiguration and GAMSEngineJob