@@ -1,6 +1,7 @@
 Version 0.21.0
 ======================
 - modify `GAMSDatabaseImpl::getSymbolByIndex` to keep it in sync with recent GMD change (gmdGetSymbolByIndex expects 1-based symbol index)
+- improved close license session when `GAMSModelInstance` is freed
 
 Version 0.20.2
 ======================
